<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@mipmap/bg_login"
    tools:context=".ui.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/lay_login_container"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/ly_retrieve_bar"
            layout="@layout/activity_main_login_navigation_bar"
            />

        <LinearLayout
            android:id="@+id/ll_login_username"
            android:layout_width="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_login_username_icon"
                android:src="@mipmap/ic_singup_mobile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"/>

            <View
                android:background="@color/login_line_color"
                android:layout_width="1px"
                android:layout_height="22dp"/>

            <EditText
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/register_username_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@null"
                android:id="@+id/et_login_username"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <ImageView
                android:scaleType="fitCenter"
                android:visibility="gone"
                android:src="@mipmap/ic_clear"
                android:id="@+id/iv_login_username_del"
                android:contentDescription="@null"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/ll_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_pwd_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_login_password" />

            <View
                android:layout_width="1px"
                android:layout_height="22dp"
                android:background="@color/login_line_color" />

            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_login_pwd_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_hold_pwd"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="4dp"
                android:adjustViewBounds="false"
                android:contentDescription="@null"
                android:padding="8dp"
                android:visibility="invisible"
                app:srcCompat="@mipmap/checkbox_checked"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_hold_hint"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:text="@string/login_forget_hint"
                android:textColor="@color/login_input_active"
                android:textSize="16sp"
                android:visibility="invisible"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_login_submit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_login_submit"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/bt_login_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_register"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login_register_hint"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:translationZ="0dp"
            tools:targetApi="lollipop" />
    </LinearLayout>
            

</FrameLayout>